# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
page_loader/: __init__.py  directory.py  file.py  html.py  loader.py  logger.py  parse_args.py  request.py  url.py  utils.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_download.py  test_parse_args.py
tests/fixtures/: page-loader-hexlet-repl-co-courses.html  test_page.html
