[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "3-rd project of the Hexlet Python Developer course"
authors = ["artur <shadaraevd@gmail.com>"]
packages = [
    { include = 'page_loader' }
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.27.1"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
requests-mock = "^1.9.3"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
asciinema = "^2.1.0"
loguru = "^0.6.0"
progress = "^1.6"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"